@@ -6,23 +6,18 @@
   end
 -%>
 HOSTS:
-  oel7:
+  alma8:
     roles:
       - default
-    platform:   el-7-x86_64
-    box:        onyxpoint/oel-7-x86_64
-    hypervisor: <%= hypervisor %>
-
-  oel8:
     platform:   el-8-x86_64
-    box:        generic/oracle8
+    box:        almalinux/8
     hypervisor: <%= hypervisor %>
 
 CONFIG:
   log_level: verbose
   type: aio
-  vagrant_cpus: 2
   multi_node: false
+  vagrant_cpus: 2
 <% if ENV['BEAKER_PUPPET_COLLECTION'] -%>
   puppet_collection: <%= ENV['BEAKER_PUPPET_COLLECTION'] %>
 <% end -%>
