@@ -17,7 +17,7 @@ CONFIG:
   log_level: verbose
   synced_folder : disabled
   type: aio
-  vagrant_memsize: 512
+  vagrant_cpus: 2
 <% if ENV['BEAKER_PUPPET_COLLECTION'] -%>
   puppet_collection: <%= ENV['BEAKER_PUPPET_COLLECTION'] %>
 <% end -%>
