@@ -20,8 +20,9 @@ HOSTS:
 
 CONFIG:
   log_level: verbose
+  vagrant_cpus: 2
   type: aio
-  vagrant_memsize: 256
+  multi_node: false
 <% if ENV['BEAKER_PUPPET_COLLECTION'] -%>
   puppet_collection: <%= ENV['BEAKER_PUPPET_COLLECTION'] %>
 <% end -%>
